More Translations, Patches and overrall

--- a/grupo_express_it/translations/es.csv
+++ b/grupo_express_it/translations/es.csv
@@ -14,6 +14,8 @@ Quantity,Cantidad
 Pricing Rule,Regla de Precios
 Margin Type,Tipo de Margen
 
+Policy,Poliza
+
 Print,Imprimir
 Copy to Clipboard,Copiar al portapapeles
 
