--- a/grupo_express_it/translations/es.csv
+++ b/grupo_express_it/translations/es.csv
@@ -52,7 +52,12 @@ Comment,Comentar
 List View,Vida de Lista
 Report View,Vista de Reporte
 Load More,Cargar Más
+
+Equals, Igual A
+Not Equals, No es Igual A
 Like,Como
+Not Like,No es Como
+Is,Esta
 
 Company,Empresa
 
