More field sanitation. Also extra translation

--- a/grupo_express_it/translations/es.csv
+++ b/grupo_express_it/translations/es.csv
@@ -4,6 +4,8 @@ Stock,Inventario
 Sales Invoice,Factura de Venta
 
 Customer,Cliente
+Stock Customer,Cliente de Inventario
+
 Customer Name,Nombre del Cliente
 In Words,En Palabras
 Posting Time,Hora de Contabilización
