Overrides for FrappeWhatsapp, also Ading a more pythonic way to send pdf and images

--- a/grupo_express_it/translations/es.csv
+++ b/grupo_express_it/translations/es.csv
@@ -62,9 +62,9 @@ List View,Vista de Lista
 Report View,Vista de Reporte
 Load More,Cargar Más
 
-Equals, Igual A
-Not Equals, No es Igual A
-Like,Como
+Equals,Igual A
+Not Equals,No es Igual A
+Like,Es Como
 Not Like,No es Como
 Is,Esta
 
